# cbr-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
benches/: query_and_deser.rs
examples/: async_client.rs  blocking_client.rs  usd_rub_time_series.rs
src/: blocking.rs  client.rs  client_common.rs  error.rs  lib.rs  models.rs  presets.rs  query.rs  types.rs
tests/: client_mock.rs  input_types.rs  query_builders.rs  strict_deserialization.rs
