[package]
name = "cbr-client"
version = "0.1.1"
edition = "2024"
authors = ["hexqnt <hexqntlab@gmail.com>"]
description = "Strictly-typed, unofficial Rust client for downloading CBR data."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hexqnt/cbr-client"
documentation = "https://docs.rs/cbr-client"
keywords = ["cbr", "bank-of-russia", "api-client", "statistics", "finance"]
categories = ["api-bindings", "web-programming::http-client"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "benches/**",
    "examples/**",
    "tests/**",
]

[features]
default = []
blocking = ["reqwest/blocking"]
chrono = ["dep:chrono"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "query",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
criterion = "0.8"
httpmock = "0.8"
serde_urlencoded = "0.7"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "query_and_deser"
harness = false
